force-app/src/objects/TR1__Named_Setting__mdt.object
<CustomObject>
    <description>Allows specifically named settings in BH4SF to be provided by an org admin. The permitted names and allowed configuration is covered in product documentation.</description>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable or disable the setting. Inactive settings are treated as if they don’t exist.</description>
        <inlineHelpText>Enable or disable the setting. Inactive settings are treated as if they don’t exist.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Configuration__c</fullName>
        <description>The value of the named setting. The format and content varies by name.</description>
        <inlineHelpText>The value of the named setting. The format and content varies by name.</inlineHelpText>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Schema__c</fullName>
        <description>Where the configuration must adhere to a specific schema, the schema&apos;s URL can be specified here.</description>
        <inlineHelpText>Where the configuration must adhere to a specific schema, the schema&apos;s URL can be specified here.</inlineHelpText>
        <label>Schema</label>
        <type>Url</type>
    </fields>
    <label>Named Setting(BH4SF)</label>
    <pluralLabel>Named Settings(BH4SF)</pluralLabel>
</CustomObject>